--- a/src/components/banner/style.css
+++ b/src/components/banner/style.css
@@ -25,6 +25,7 @@
   font-size: 45px;
   margin-bottom: 20px;
   font-family: "Roboto", sans-serif;
+  color: #ac4f87;
 }
 
 .banner a.shopping-button {
